da day aoi sang file product

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -761,7 +761,11 @@
                   <a data-filter=".loai5" href="#" class="">Chân tổ yến</a>
                 </li>
                 <li>
-                  <a data-filter=".loai1" href="#" class="ScrollChangePorfolio"
+                  <a
+                    data-filter=".loai1"
+                    href="#"
+                    ON
+                    class="ScrollChangePorfolio"
                     >Tổ yến vụn</a
                   >
                 </li>
@@ -821,7 +825,7 @@
         </div>
       </div>
     </footer>
-
+    <div class="productitemId" style="display: none"></div>
     <section id="copyright" class="color_section">
       <div class="container">
         <div class="row">
@@ -872,6 +876,6 @@
     <script src="twitter/jquery.tweet.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/vendor/myScript.js"></script>
+    <script src="js/myScript.js"></script>
   </body>
 </html>
