san pham va about

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -97,13 +97,13 @@
             <nav>
               <ul id="mainmenu" class="menu sf-menu responsive-menu superfish">
                 <li class="active">
-                  <a href="./">Home</a>
+                  <a href="./">Trang chủ</a>
                 </li>
                 <li class="">
-                  <a href="./about.html">About</a>
+                  <a href="./about.html">Về chúng tôi</a>
                 </li>
                 <li class="dropdown">
-                  <a href="./gallery.html">Folio</a>
+                  <a href="./gallery.html">sản Phẩm</a>
                   <ul class="dropdown-menu">
                     <li class="">
                       <a href="./gallery.html">Folio version 1</a>
@@ -153,15 +153,14 @@
               <div class="thumbnail">
                 <div class="badge">
                   <p>01</p>
-                  <span>Community<br />Assistance</span>
+                  <span>Cam kết yến <br />Nguyên chất 100%</span>
                 </div>
                 <div class="caption">
                   <p>
-                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                    qui blanditiis praesentium voluptatum deleniti atque
-                    corrupti quos dolores et.
+                    Sản phẩm của VuaYến được khai thác và ra thành phẩm trong
+                    quy trình khép kín, đảm bảo nguyên chất 100%
                   </p>
-                  <a class="theme_btn" href="#">more</a>
+                  <!-- <a class="theme_btn" href="#">more</a> -->
                 </div>
               </div>
             </div>
@@ -171,15 +170,16 @@
               <div class="thumbnail">
                 <div class="badge">
                   <p>02</p>
-                  <span>Energy<br />Assistance</span>
+                  <span
+                    >Đảm bảo an toàn<br />
+                    vệ sinh thực phẩm</span
+                  >
                 </div>
                 <div class="caption">
                   <p>
-                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                    qui blanditiis praesentium voluptatum deleniti atque
-                    corrupti quos dolores et.
+                    Đã được cấp chứng nhận vệ sinh an toàn thực phẩm, cam kết an
+                    toàn với sức khỏe
                   </p>
-                  <a class="theme_btn" href="#">more</a>
                 </div>
               </div>
             </div>
@@ -189,15 +189,16 @@
               <div class="thumbnail">
                 <div class="badge">
                   <p>03</p>
-                  <span>Business<br />Assistance</span>
+                  <span
+                    >Đổi trả Sản phẩm <br />
+                    nếu không hài lòng</span
+                  >
                 </div>
                 <div class="caption">
                   <p>
-                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                    qui blanditiis praesentium voluptatum deleniti atque
-                    corrupti quos dolores et.
+                    Quý khách hàng được quyền đổi trả trong vòng 7 ngày nếu sản
+                    phẩm không đúng chất lượng
                   </p>
-                  <a class="theme_btn" href="#">more</a>
                 </div>
               </div>
             </div>
@@ -207,15 +208,16 @@
               <div class="thumbnail">
                 <div class="badge">
                   <p>04</p>
-                  <span>Business Relocation<br />Assistance</span>
+                  <span
+                    >Giao hàng nhanh chóng<br />
+                    thanh toán toàn quốc</span
+                  >
                 </div>
                 <div class="caption">
                   <p>
-                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                    qui blanditiis praesentium voluptatum deleniti atque
-                    corrupti quos dolores et.
+                    Giao hàng miễn phí toàn quốc thanh toán COD ngay tại nơi
+                    nhận hàng
                   </p>
-                  <a class="theme_btn" href="#">more</a>
                 </div>
               </div>
             </div>
@@ -224,7 +226,7 @@
       </div>
     </section>
 
-    <section class="info_box light_section">
+    <!-- <section class="info_box light_section">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6">
@@ -303,9 +305,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section id="testimonials" class="color_section parallax gradient">
+    <section
+      id="testimonials"
+      class="testimonials_index color_section parallax gradient"
+    >
       <div class="container">
         <div class="row">
           <div class="col-sm-12 text-center">
@@ -333,27 +338,22 @@
                   data-slide-to="2"
                 ></li>
               </ol>
-              <div class="carousel-inner">
+              <div class="carousel-inner" style="height: 150px">
                 <div class="item active">
                   <h4 class="carousel-introtext">
-                    Design is not the narrow application of formal skills, it is
-                    a way of thinking.
+                    Sự tin tưởng cho người thân của bạn
                   </h4>
-                  <p class="carousel-readmore">John Doe</p>
                 </div>
                 <div class="item">
                   <h4 class="carousel-introtext">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Cupiditate cum.
+                    chúng tôi luôn phấn đấu xây dựng và bảo vệ chữ tín trong
+                    lòng mỗi Quý khách hàng.
                   </h4>
-                  <p class="carousel-readmore">Catrin Jhonson</p>
                 </div>
                 <div class="item">
                   <h4 class="carousel-introtext">
-                    Cupiditate, eum adipisci asperiores animi eos sint modi amet
-                    omnis fugiat.
+                    Vua Yến là món quà gửi gắm sự yêu thương.
                   </h4>
-                  <p class="carousel-readmore">Nataly Smith</p>
                 </div>
               </div>
             </div>
@@ -730,7 +730,7 @@
               class="col-sm-12 text-center to_animate"
               data-animation="fadeInUp"
             >
-              <h2 class="section_header">Last News</h2>
+              <h2 class="section_header">Các dòng sản phẩm</h2>
             </div>
           </div>
           <div class="row">
@@ -798,9 +798,9 @@
               class="col-md-12 load-post text-center to_animate"
               data-animation="fadeInUp"
             >
-              <button type="button" class="btn blog-btn load-posts">
+              <!-- <button type="button" class="btn blog-btn load-posts">
                 Load More Post <i class="fa fa-download"></i>
-              </button>
+              </button> -->
             </div>
           </div>
         </div>
@@ -811,7 +811,21 @@
 
     <!-- -------------- -->
     <footer id="footer" class="light_section">
-      <div class="container">
+      <div class="container-fluid">
+        <div class="footerInformation row">
+          <div class="col-12">
+            <h3>LIÊN HỆ VỚI CHÚNG TÔI</h3>
+            <p>
+              <span>Hà Nội:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô, Cầu
+              Giấy, Hà Nội
+            </p>
+            <p>Điện thoại : 0888698986</p>
+            <p>
+              <span>Nha Trang:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô,
+              Cầu Giấy, Hà Nội
+            </p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-12">
             <ul class="follow_icon text-center">
