--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -45,14 +45,14 @@
             </div>
             <nav>
               <ul id="mainmenu" class="menu sf-menu responsive-menu superfish">
-                <li class="">
-                  <a href="./">Home</a>
+                <li class="active">
+                  <a href="./">Trang chủ</a>
                 </li>
                 <li class="">
-                  <a href="./about.html">About</a>
+                  <a href="./about.html">Về chúng tôi</a>
                 </li>
-                <li class="dropdown active">
-                  <a href="./gallery.html">Folio</a>
+                <li class="dropdown">
+                  <a href="./gallery.html">sản Phẩm</a>
                   <ul class="dropdown-menu">
                     <li class="">
                       <a href="./gallery.html">Folio version 1</a>
@@ -94,214 +94,90 @@
       </div>
     </header>
 
-    <section id="portfolio" class="fullwidth_portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h1 class="block-header">Our Projects</h1>
-            <p class="first_indent">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum,
-              non, iste praesentium ullam voluptate tenetur dolor impedit
-              possimus repellat labore provident quisquam nostrum doloribus quis
-              dolorum perferendis dolore sint hic.
-            </p>
+    <div id="test2">
+      <section id="post-blogs">
+        <div class="container">
+          <div class="row">
+            <div
+              class="col-sm-12 text-center to_animate"
+              data-animation="fadeInUp"
+            >
+              <h2 class="section_header">Các dòng sản phẩm</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="text-center filters">
+              <ul id="filtrable">
+                <li>
+                  <a id="allProduct" class="selected" data-filter="*" href="#"
+                    >All</a
+                  >
+                </li>
+
+                <li>
+                  <a data-filter=".loai2" href="#" class="ScrollChangePorfolio"
+                    >Tổ yến sơ chế</a
+                  >
+                </li>
+                <li>
+                  <a data-filter=".loai3" href="#" class="ScrollChangePorfolio"
+                    >Tổ yến thô</a
+                  >
+                </li>
+                <li>
+                  <a data-filter=".loai4" href="#" class="ScrollChangePorfolio"
+                    >Tổ yến sào tinh chế</a
+                  >
+                </li>
+                <li>
+                  <a data-filter=".loai5" href="#" class="">Chân tổ yến</a>
+                </li>
+                <li>
+                  <a
+                    data-filter=".loai1"
+                    href="#"
+                    ON
+                    class="ScrollChangePorfolio"
+                    >Tổ yến vụn</a
+                  >
+                </li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
+
+            <div
+              class="items-row portfolio portfolioScrollAll xibachao filtrable clearfix isotope"
+              id="portfolioContainer"
+            >
+              <div class="item isotope-item loai2" id="product1"></div>
+              <div class="item isotope-item loai3" id="product2"></div>
+
+              <!-- <li class="item isotope-item loai3" id="product5"></li> -->
+              <!--<li class="item isotope-item loai3" id="product6"></li>
+              <li class="item isotope-item loai3" id="product7"></li>
+              <li class="item isotope-item loai3" id="product8"></li>
+              <li class="item isotope-item loai4" id="product9"></li>
+              <li class="item isotope-item loai4" id="product10"></li>
+              <li class="item isotope-item loai4" id="product11"></li>
+              <li class="item isotope-item loai4" id="product12"></li>
+              <li class="item isotope-item loai5" id="product13"></li>
+              <li class="item isotope-item loai5" id="product14"></li>
+              <li class="item isotope-item loai5" id="product15"></li> -->
+            </div>
+          </div>
+          <div class="row">
+            <div
+              class="col-md-12 load-post text-center to_animate"
+              data-animation="fadeInUp"
+            >
+              <!-- <button type="button" class="btn blog-btn load-posts">
+                Load More Post <i class="fa fa-download"></i>
+              </button> -->
+            </div>
           </div>
         </div>
-      </div>
-      <div id="portfolio_wrapper">
-        <div class="text-center filters">
-          <ul id="filtrable">
-            <li><a class="selected" data-filter="*" href="#">All</a></li>
-            <li>
-              <a data-filter=".graphicdesign" href="#" class=""
-                >Graphic Design</a
-              >
-            </li>
-            <li>
-              <a data-filter=".photography" href="#" class="">Photography</a>
-            </li>
-            <li>
-              <a data-filter=".webdesign" href="#" class="">Web Design</a>
-            </li>
-          </ul>
-          <div class="clearfix"></div>
-        </div>
-
-        <ul
-          class="items-row row portfolio filtrable clearfix isotope"
-          id="portfolioContainer"
-        >
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img1.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img1.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single1.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item photography webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img2.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img2.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single2.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item photography webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img3.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img3.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single3.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img4.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img4.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single4.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img5.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img5.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single5.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img6.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img6.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single6.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item photography webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img7.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img7.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single7.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img8.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img8.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single8.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img9.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img9.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single9.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img10.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img10.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single10.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img11.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img11.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single11.html"></a>
-              </div>
-            </div>
-          </li>
-          <li class="item isotope-item graphicdesign webdesign">
-            <div class="portfolio_item_image">
-              <img alt="" src="example/gallery/intro_img12.jpg" />
-              <div class="portfolio_links">
-                <a
-                  class="p-view prettyPhoto"
-                  title=""
-                  data-gal="prettyPhoto[gal]"
-                  href="example/gallery/intro_img12.jpg"
-                ></a>
-                <a class="p-link" title="" href="./gallery-single12.html"></a>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <section id="partners" class="color_section">
       <div class="container">
@@ -351,50 +227,22 @@
       </div>
     </section>
 
-    <section class="grey_section">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <h2 class="block-header">Latest Work</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="related media">
-              <div class="pull-left">
-                <img src="example/gallery/20.jpg" alt="" class="media-object" />
-              </div>
-              <div class="media-body">
-                <div class="related-description">
-                  <h3>Project Name</h3>
-                  <p>
-                    Stet clita kasd est lorem ipsum dolor sit amet. Lorem ipsum
-                    adipisicing elit. Maxime, voluptates, nemo, quaerat culpa
-                    sunt <strong>quibusdam</strong> vitae ipsa.
-                  </p>
-
-                  <p class="skills">
-                    <span>Skills:</span> Photography, Photoshop, Illustration
-                  </p>
-                  <p class="client">
-                    <span>Client:</span> <a href="#">Client</a>
-                  </p>
-                  <p class="location">
-                    <span>Location:</span> <a href="#">www.project.com</a>
-                  </p>
-                  <p class="view-project">
-                    <a href="#" class="theme_btn">View Project</a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <footer id="footer" class="light_section">
-      <div class="container">
+      <div class="container-fluid">
+        <div class="footerInformation row">
+          <div class="col-12">
+            <h3>LIÊN HỆ VỚI CHÚNG TÔI</h3>
+            <p>
+              <span>Hà Nội:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô, Cầu
+              Giấy, Hà Nội
+            </p>
+            <p>Điện thoại : 0888698986</p>
+            <p>
+              <span>Nha Trang:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô,
+              Cầu Giấy, Hà Nội
+            </p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-12">
             <ul class="follow_icon text-center">
@@ -422,6 +270,12 @@
     <div class="preloader">
       <div class="preloaderimg"></div>
     </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"
+      integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg=="
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/vendor/jquery-1.11.1.min.js"></script>
     <script src="js/vendor/jquery-migrate-1.2.1.min.js"></script>
@@ -454,5 +308,6 @@
     <script src="twitter/jquery.tweet.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/myScript.js"></script>
   </body>
 </html>
