complet giao dien blog.html(chi tiet san pham)

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -481,7 +481,21 @@
     </section>
 
     <footer id="footer" class="light_section">
-      <div class="container">
+      <div class="container-fluid">
+        <div class="footerInformation row">
+          <div class="col-12">
+            <h3>LIÊN HỆ VỚI CHÚNG TÔI</h3>
+            <p>
+              <span>Hà Nội:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô, Cầu
+              Giấy, Hà Nội
+            </p>
+            <p>Điện thoại : 0888698986</p>
+            <p>
+              <span>Nha Trang:</span> Tầng 2, số 3 ngõ 9 đường 800A, Nghĩa Đô,
+              Cầu Giấy, Hà Nội
+            </p>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-12">
             <ul class="follow_icon text-center">
