complete submit button

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -437,20 +437,7 @@
               <h3>Các sản phẩm khác</h3>
               <!-- <div class="twitter"></div> -->
             </div>
-            <div id="sidebarProductRender">
-              <!-- <div class="widget_tag_cloud">
-                <div class="row media">
-                  <div class="col-sm-4 media_img">
-                    <img src="/img/aboutCarousel1.jpg" alt="..." />
-                  </div>
-
-                  <div class="media-body col-sm-8">
-                    <h5 class="mt-0">Media heading</h5>
-                    <p>Giá :1800000 VND</p>
-                  </div>
-                </div>
-              </div> -->
-            </div>
+            <div id="sidebarProductRender"></div>
           </aside>
           <!-- eof Sidebar -->
         </div>
