--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -549,5 +549,35 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="js/product.js"></script>
+    <!-- facebook chat  -->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v9.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
+
+    <!-- Your Chat Plugin code -->
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="848711842168969"
+      theme_color="#ffc300"
+      logged_in_greeting="Chúng tôi có thể giúp gì cho bạn"
+      logged_out_greeting="Chúng tôi có thể giúp gì cho bạn"
+    ></div>
   </body>
 </html>
