--- a/HTML/about.html
+++ b/HTML/about.html
@@ -52,46 +52,13 @@
             <nav>
               <ul id="mainmenu" class="menu sf-menu responsive-menu superfish">
                 <li class="">
-                  <a href="./">Home</a>
+                  <a href="./">Trang chủ</a>
                 </li>
                 <li class="active">
-                  <a href="./about.html">About</a>
+                  <a href="./about.html">Về chúng tôi</a>
                 </li>
                 <li class="dropdown">
-                  <a href="./gallery.html">Folio</a>
-                  <ul class="dropdown-menu">
-                    <li class="">
-                      <a href="./gallery.html">Folio version 1</a>
-                    </li>
-                    <li class="">
-                      <a href="./gallery3.html">Folio version 2</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="./blog.html">Blog</a>
-                  <ul class="dropdown-menu">
-                    <li class="">
-                      <a href="./blog.html">blog</a>
-                    </li>
-                    <li class="">
-                      <a href="./blog-single.html">Blog Post</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="./icons.html">Features</a>
-                  <ul class="dropdown-menu">
-                    <li class="">
-                      <a href="./icons.html">Icons</a>
-                    </li>
-                    <li class="">
-                      <a href="./404.html">404</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="">
-                  <a href="./contact.html">Contact</a>
+                  <a href="./gallery.html">sản Phẩm</a>
                 </li>
               </ul>
             </nav>
@@ -421,5 +388,36 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+
+    <!-- facebook chat -->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v9.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
+
+    <!-- Your Chat Plugin code -->
+    <div
+      class="fb-customerchat"
+      attribution="setup_tool"
+      page_id="848711842168969"
+      theme_color="#ffc300"
+      logged_in_greeting="Chúng tôi có thể giúp gì cho bạn"
+      logged_out_greeting="Chúng tôi có thể giúp gì cho bạn"
+    ></div>
   </body>
 </html>
