--- a/HTML/index.html
+++ b/HTML/index.html
@@ -747,28 +747,13 @@
               <div class="item isotope-item loai4" id="product4"></div>
               <div class="item isotope-item loai5" id="product5"></div>
               >
-              <!-- <li class="item isotope-item loai3" id="product5"></li> -->
-              <!--<li class="item isotope-item loai3" id="product6"></li>
-              <li class="item isotope-item loai3" id="product7"></li>
-              <li class="item isotope-item loai3" id="product8"></li>
-              <li class="item isotope-item loai4" id="product9"></li>
-              <li class="item isotope-item loai4" id="product10"></li>
-              <li class="item isotope-item loai4" id="product11"></li>
-              <li class="item isotope-item loai4" id="product12"></li>
-              <li class="item isotope-item loai5" id="product13"></li>
-              <li class="item isotope-item loai5" id="product14"></li>
-              <li class="item isotope-item loai5" id="product15"></li> -->
             </div>
           </div>
           <div class="row">
             <div
               class="col-md-12 load-post text-center to_animate"
               data-animation="fadeInUp"
-            >
-              <!-- <button type="button" class="btn blog-btn load-posts">
-                Load More Post <i class="fa fa-download"></i>
-              </button> -->
-            </div>
+            ></div>
           </div>
         </div>
       </section>
